# raft-service-rs

./: Cargo.toml  README.md  build.rs  init_single_cluster.sh  spellcheck.dic
.github/workflows/: ci.yml
examples/: kv_cluster.rs
proto/: app.proto  app_types.proto  common.proto  controller.proto  internal.proto  raft.proto
src/: application.rs  client.rs  error.rs  grpc.rs  lib.rs  orchestrator.rs  raft.rs  server.rs
src/grpc/: app_service.rs  controller_service.rs  internal_service.rs  raft_service.rs
src/raft/: config.rs  log_store.rs  network.rs  pb_impl.rs  state_machine.rs
src/raft/config/: type_config.rs
src/raft/log_store/: rocksdb.rs
src/raft/network/: factory.rs  grpc.rs  v2.rs
src/raft/network/grpc/: factory.rs  v2.rs
src/raft/pb_impl/: append_entries_request.rs  append_entries_response.rs  client_write_response.rs  entry.rs  leader_id.rs  log_id.rs  membership.rs  snapshot_request.rs  vote.rs  vote_request.rs  vote_response.rs
src/raft/state_machine/: data.rs  snapshot.rs  store.rs
tests/: test_cluster.rs
