[package]
name = "raft-service-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
futures-util = "0.3.31"
openraft = { git = "https://github.com/databendlabs/openraft.git", branch = "release-0.10", version = "0.10.0", features = ["serde"] }
prost = "0.14.1"
rocksdb = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tonic = "0.14.1"
tonic-prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
