[package]
name = "raft-service-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
derive_more = { version = "2.0.1", features = ["display"] }
futures-util = "0.3.31"
maplit = "1.0.2"
openraft = { git = "https://github.com/databendlabs/openraft.git", rev = "f13f0eec7922e84ad9a3beeb166bb8a8133805ad", features = ["serde"] }
prost = "0.14.1"
rocksdb = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.1"

[dev-dependencies]
tempfile = "3.23.0"
